# helpbot

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: gemini-code-review.yml
helpbot/: __init__.py  chat.py  config.py  conversation.py  output.py  registry.py  registry.toml
helpbot/db/: _init_.py  schema.sql  seed.sql
workflows/: gemini-code-review.yml
