[project]
name = "helpbot"
version = "0.1.0"
description = "HelpBot — AI-powered customer support chatbot for PageTurner Books"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.14.2"
]
